# Jazzy-Multi-Robot-Sandbox

./: LICENSE  README.md  frames_2024-06-14_14.56.59.gv
docs/: contributing.md  motivation.md  multi-robot-simulations.md  node_1.md  nodes.md  pose_tf_publisher.md  robots.md  usage.md  working_environment.md
gazebo_resources/robots/CTU_CRAS_NORLAB_HUSKY_SENSOR_CONFIG_1/: metadata.pbtxt  model.sdf
gazebo_resources/robots/X2_Config_6/: model.config  model.sdf
gazebo_resources/robots/X4_GPS_RGBD/: model.sdf
gazebo_resources/robots/csiro_data61_spot_sensor_config_1/: model.sdf
src/gazebo-robots-descriptions/: CMakeLists.txt  package.xml  setup.py
src/gazebo-robots-descriptions/config/: gz_bridge.yaml
src/gazebo-robots-descriptions/launch/: gazebo-multi-robot-bringup.py  gazebo-multi-robot-bringup_launch.py  gazebo-single-robot-gz-bridge-config-file_launch.py  gazebo-spawn-husky.py  single-robot.py  (+4 more)
src/multi-robot-exploration/: CMakeLists.txt  package.xml
src/multi-robot-simulations/: CMakeLists.txt  package.xml  setup.py
src/multi-robot-simulations/config/: gz_bridge.yaml
src/multi-robot-simulations/config/rviz/: husky_1.rviz  husky_2.rviz  x2_1.rviz  x2_2.rviz  x4_1.rviz  x4_2.rviz
src/multi-robot-simulations/include/: PoseTFPublisher.h
src/multi-robot-simulations/launch/: gazebo-multi-robot-bringup_launch.py  gazebo-single-robot-gz-bridge-config-file_launch.py  gazebo-single-robot-gz-bridge-no-config-file_launch.py  gazebo_multi_robot_bringup_launch.py  gazebo_single_robot_gz_bridg_config_file_launch.py  gazebo_single_robot_gz_bridge_config_file_launch.py  gazebo_single_robot_gz_bridge_no_config_file_launch.py  gazebo_spawn_drone_x4_launch.py  gazebo_spawn_husky_launch.py  gazebo_spawn_spot_mini_launch.py  gazebo_spawn_x2_launch.py  keyboard-teleop-robot-id_launch.py
src/multi-robot-simulations/robots/CTU_CRAS_NORLAB_HUSKY_SENSOR_CONFIG_1/: model.sdf
src/multi-robot-simulations/src/: MultiRobotSimulationMain.cpp  PoseTFPublisher.cpp
src/multi-robot-simulations/worlds/high-end/: finals_systems_prize.sdf
src/multi-robot-simulations/worlds/low-end/: empty.sdf
(+6 files in other folders)
