<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi-robot-simulations</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alysson.ribeiro.silva@gmail.com">ophien</maintainer>
  <license>BSD-4 Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
